--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: "courier prime", monospace;
     overflow-x: hidden;
