--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,17 @@ html{
 body{
     font-family: "courier prime", monospace;
     overflow-x: hidden;
-    background: rgb(0, 0, 0);
+    background: rgb(5, 5, 5);
     /* I've added 2 good blues, u can change according to your choice too */
-    color: rgb(0, 157, 255);
-    /* color: rgb(0, 115, 255); */
+    /* color: rgb(0, 157, 255); */
+    /* color: rgb(0, 255, 0); */
+    /* color: rgb(38, 255, 0); */
+    color: #59EE5F;
 }
 
 ::selection{
-    color: rgb(0, 157, 255);
-    background: white;
+    color: black;
+    background: rgb(173, 255, 182);
 }
 
 .navlink{
@@ -52,7 +54,7 @@ body{
 
 @media screen and (min-width:1440px) {
     html {
-        font-size: 115%;
+        font-size: 120%;
     }
 }
 
